# media-command-center

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  metrics.py
backend/app/collectors/: base.py  calendar.py  downloads.py  health.py  streaming.py  transcoding.py
backend/app/routers/: calendar.py  downloads.py  health.py  streaming.py  transcoding.py
backend/app/services/: base.py  bazarr.py  overseerr.py  plex.py  prowlarr.py  radarr.py  sabnzbd.py  sonarr.py  tdarr.py  unpackerr.py
backend/app/ws/: hub.py
backend/tests/: test_config.py  test_main.py  test_ws_hub.py
backend/tests/collectors/: test_calendar.py  test_downloads.py  test_health.py  test_streaming.py  test_transcoding.py
backend/tests/services/: test_arr_clients.py  test_base.py  test_custom_clients.py
docs/plans/: 2026-02-19-media-command-center-design.md  2026-02-19-media-command-center-plan.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/layout/: Shell.tsx  Sidebar.tsx
frontend/src/components/panels/: CalendarPanel.tsx  DownloadsPanel.tsx  HealthGrid.tsx  StreamingPanel.tsx  TranscodingPanel.tsx
frontend/src/hooks/: useStore.ts  useWebSocket.ts
frontend/src/lib/: types.ts  utils.ts
